--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ os: linux
 dist: xenial
 language: python
 python: "3.7"
+addons:
+  apt:
+    packages:
+    - gcc-multilib
+    - g++-multilib
 install:
   - pip install conan
 before_script:
