--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,27 @@
 root = true
 
 [*]
+end_of_line = lf
 charset = utf-8
+insert_final_newline = true
 indent_style = space
 indent_size = 4
-insert_final_newline = true
-end_of_line = lf
+
+[*.{cpp,hpp,c,h,mm}]
+trim_trailing_whitespace = true
+
+[{*.{py}]
+indent_style = space
+indent_size = 4
+
+[Makefile]
+indent_style = tab
+
+[*.{bat,cmd,cmd.*}]
+end_of_line = crlf
+indent_style = space
+indent_size = 4
+
+[.travis.yml]
+indent_style = space
+indent_size = 2
