new config files and better macos handling

--- a/files/cmake/common/CMakeLists.txt
+++ b/files/cmake/common/CMakeLists.txt
@@ -181,15 +181,11 @@ set(PROJECT_FRAMEWORK_LINKS "" CACHE INTERNAL "")
 # Library links
 set(PROJECT_LIBRARY_LINKS "" CACHE INTERNAL "")
 
-# CFlags
+# C flags
 set(PROJECT_CMAKE_C_FLAGS "${PROJECT_CMAKE_C_FLAGS} -Wall" CACHE INTERNAL "")
 
-# CXXFlags
+# CXX flags
 set(PROJECT_CMAKE_CXX_FLAGS "${PROJECT_CMAKE_CXX_FLAGS} -std=c++${PROJECT_CONFIG_CPP_STANDARD} -Wall" CACHE INTERNAL "")
 
 # Compile options
 set(PROJECT_COMPILE_OPTIONS "" CACHE INTERNAL "")
-
-# Flags
-set(CMAKE_C_FLAGS "${PROJECT_CMAKE_C_FLAGS}" CACHE INTERNAL "")
-set(CMAKE_CXX_FLAGS "${PROJECT_CMAKE_CXX_FLAGS}" CACHE INTERNAL "")
