--- a/files/targets/ios_framework/cmake/CMakeLists.txt
+++ b/files/targets/ios_framework/cmake/CMakeLists.txt
@@ -25,8 +25,7 @@ endif()
 set(DEVELOPMENT_TEAM_ID "" CACHE STRING "Development Team ID")
 set(CODE_SIGN_IDENTITY "iPhone Developer" CACHE STRING "Sign Identity")
 set(FRAMEWORK_NAME "${PROJECT_CONFIG_NAME}" CACHE STRING "Framework Name")
-set(FRAMEWORK_BUNDLE_IDENTIFIER "com.ezored.core" CACHE STRING "Bundle Identifier")
-set(DEPLOYMENT_TARGET "9.0" CACHE STRING "Minimum iOS deployment version")
+set(FRAMEWORK_BUNDLE_IDENTIFIER "com.ezored.library" CACHE STRING "Bundle Identifier")
 set(DEVICE_FAMILY "1,2" CACHE STRING "Device Family")
 
 # Project
@@ -178,15 +177,19 @@ set(PROJECT_FRAMEWORK_LINKS
     CACHE INTERNAL ""
 )
 
-# CFlags
-set(PROJECT_CMAKE_C_FLAGS "${PROJECT_CMAKE_C_FLAGS} -fobjc-arc" CACHE INTERNAL "")
-
-# CXXFlags
-set(PROJECT_CMAKE_CXX_FLAGS "${PROJECT_CMAKE_CXX_FLAGS} -fobjc-arc -stdlib=libc++" CACHE INTERNAL "")
-
 # Conan
 include(${PROJECT_BUILD_DIR}/conan/conanbuildinfo.cmake)
 conan_basic_setup()
+
+# C flags
+set(PROJECT_CMAKE_C_FLAGS "${PROJECT_CMAKE_C_FLAGS} -fobjc-arc" CACHE INTERNAL "")
+
+# CXX flags
+set(PROJECT_CMAKE_CXX_FLAGS "${PROJECT_CMAKE_CXX_FLAGS} -fobjc-arc -stdlib=libc++" CACHE INTERNAL "")
+
+# Flags
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${PROJECT_CMAKE_C_FLAGS}" CACHE INTERNAL "")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${PROJECT_CMAKE_CXX_FLAGS}" CACHE INTERNAL "")
 
 # Project
 include_directories(${PROJECT_HEADER_SEARCH_PATHS})
@@ -207,7 +210,7 @@ set_target_properties(${PROJECT_CONFIG_NAME} PROPERTIES
     FRAMEWORK_VERSION A
     MACOSX_FRAMEWORK_IDENTIFIER "${FRAMEWORK_BUNDLE_IDENTIFIER}"
     MACOSX_FRAMEWORK_BUNDLE_VERSION "${PROJECT_CONFIG_VERSION}"
-    MACOSX_FRAMEWORK_SHORT_VERSION_STRING "${PROJECT_CONFIG_VERSION}"
+    MACOSX_FRAMEWORK_SHORT_VERSION_STRING "${PROJECT_CONFIG_VERSION}"    
     VERSION "${PROJECT_CONFIG_VERSION}"
     SOVERSION "${PROJECT_CONFIG_VERSION}"
     XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET "${DEPLOYMENT_TARGET}"
