--- a/files/targets/macos_app/cmake/CMakeLists.txt
+++ b/files/targets/macos_app/cmake/CMakeLists.txt
@@ -10,8 +10,6 @@ set(PROJECT_ROOT_PATH ${CMAKE_SOURCE_REALPATH})
 set(PROJECT_BUILD_DIR ${PROJECT_ROOT_PATH}/build/${PROJECT_TARGET_NAME}/${CMAKE_BUILD_TYPE}/${PROJECT_CONFIG_ARCH} CACHE INTERNAL "")
 
 # Platform configurations
-set(DEPLOYMENT_TARGET "10.9" CACHE STRING "Minimum macOS Deployment Version")
-set(CMAKE_OSX_DEPLOYMENT_TARGET ${DEPLOYMENT_TARGET})
 set(DEVELOPMENT_TEAM_ID "" CACHE STRING "Development Team ID")
 set(CODE_SIGN_IDENTITY "Mac Developer" CACHE STRING "Sign Identity")
 
@@ -97,7 +95,7 @@ set_target_properties(${PROJECT_CONFIG_NAME} PROPERTIES
     XCODE_ATTRIBUTE_DEVELOPMENT_TEAM "${DEVELOPMENT_TEAM_ID}"
     XCODE_ATTRIBUTE_ONLY_ACTIVE_ARCH NO
     XCODE_ATTRIBUTE_SKIP_INSTALL YES
-    MACOSX_DEPLOYMENT_TARGET "${DEPLOYMENT_TARGET}"
+    MACOSX_DEPLOYMENT_TARGET "${CMAKE_OSX_DEPLOYMENT_TARGET}"
 )
 
 target_compile_options(${PROJECT_CONFIG_NAME} PUBLIC "${PROJECT_COMPILE_OPTIONS}")
