--- a/projects/android/Sample/app/src/main/AndroidManifest.xml
+++ b/projects/android/Sample/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="true">
 
         <!-- ACTIVITIES -->
