--- a/projects/android/Sample/app/build.gradle
+++ b/projects/android/Sample/app/build.gradle
@@ -1,16 +1,14 @@
 apply plugin: 'com.android.application'
 
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+
 repositories {
     if (gradle.ext.usePrebuiltLibrary) {
         flatDir {
             dirs 'libs', gradle.ext.prebuiltDir
         }
     }
-}
-
-project.ext {
-    // https://developer.android.com/topic/libraries/support-library/revisions
-    supportLibVersion = '28.0.0'
 }
 
 android {
@@ -26,7 +24,7 @@ android {
         versionName "1.0.5"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     compileOptions {
@@ -72,19 +70,25 @@ dependencies {
         implementation project(':ezored-library')
     }
 
-    implementation "com.android.support:appcompat-v7:${project.ext.supportLibVersion}"
-    implementation "com.android.support:design:${project.ext.supportLibVersion}"
-    implementation "com.android.support:support-vector-drawable:${project.ext.supportLibVersion}"
+    implementation "androidx.appcompat:appcompat:1.0.2"
+    implementation "androidx.multidex:multidex:2.0.1"
+    implementation "androidx.core:core-ktx:1.0.2"
+    implementation "androidx.vectordrawable:vectordrawable:1.0.1"
+    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
+    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0"
+    annotationProcessor "androidx.annotation:annotation:1.1.0"
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.41"
+
     implementation 'org.greenrobot:eventbus:3.1.1'
-    implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
-
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
-    annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
+    implementation "com.google.android.material:material:1.0.0"
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
