--- a/projects/android/Sample/app/build.gradle
+++ b/projects/android/Sample/app/build.gradle
@@ -13,18 +13,18 @@ repositories {
 
 android {
     compileSdkVersion 28
-    flavorDimensions "default"
-    buildToolsVersion "28.0.3"
+    flavorDimensions 'default'
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
-        applicationId "com.ezored.sample"
+        applicationId 'com.ezored.sample'
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 6
-        versionName "1.0.5"
+        versionName '1.0.5'
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
     compileOptions {
@@ -53,7 +53,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
-            versionNameSuffix "-DEBUG"
+            versionNameSuffix '-DEBUG'
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -70,23 +70,26 @@ dependencies {
         implementation project(':ezored-library')
     }
 
-    implementation "androidx.appcompat:appcompat:1.0.2"
-    implementation "androidx.multidex:multidex:2.0.1"
-    implementation "androidx.core:core-ktx:1.0.2"
-    implementation "androidx.vectordrawable:vectordrawable:1.0.1"
-    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.core:core-ktx:1.0.2'
-    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
-    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0"
-    annotationProcessor "androidx.annotation:annotation:1.1.0"
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.0.0'
+    annotationProcessor 'androidx.annotation:annotation:1.1.0'
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.41"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.41'
 
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
-    implementation "com.google.android.material:material:1.0.0"
+    implementation 'com.google.android.material:material:1.0.0'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.2'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
