fixed windows cmake variables

--- a/files/targets/windows_app/cmake/CMakeLists.txt
+++ b/files/targets/windows_app/cmake/CMakeLists.txt
@@ -58,6 +58,10 @@ set(
     CACHE INTERNAL ""
 )
 
+# Flags
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${PROJECT_CMAKE_C_FLAGS}" CACHE INTERNAL "")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${PROJECT_CMAKE_CXX_FLAGS}" CACHE INTERNAL "")
+
 # Project
 include_directories(${PROJECT_HEADER_SEARCH_PATHS})
 link_directories(${PROJECT_LIBRARY_SEARCH_PATHS})
