fixed appveyor script

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,7 @@ install:
     - set PATH=%PYTHON%;%PYTHON%/Scripts/;%PATH%
     - pip.exe install conan --upgrade
     - conan user
+    - conan remote add bincrafters https://api.bintray.com/conan/bincrafters/public-conan
     - python make.py conan install_profiles
 
 test_script:
