--- a/projects/android/Sample/app/build.gradle
+++ b/projects/android/Sample/app/build.gradle
@@ -12,16 +12,16 @@ repositories {
 }
 
 android {
-    compileSdkVersion 28
-    flavorDimensions 'default'
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 29
+    flavorDimensions "default"
+    buildToolsVersion "29.0.2"
 
     defaultConfig {
         applicationId 'com.ezored.sample'
         minSdkVersion 16
-        targetSdkVersion 28
-        versionCode 11
-        versionName '1.2.0'
+        targetSdkVersion 29
+        versionCode 12
+        versionName '1.3.0'
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -85,8 +85,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-common-java8:2.0.0'
 
-    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.0.0'
     annotationProcessor 'androidx.annotation:annotation:1.1.0'
 
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.41'
