--- a/files/targets/ios_framework/cmake/CMakeLists.txt
+++ b/files/targets/ios_framework/cmake/CMakeLists.txt
@@ -8,7 +8,7 @@ set(PROJECT_CONFIG_CPP_STANDARD "11" CACHE STRING "11")
 set(PROJECT_TARGET_NAME "ios_framework" CACHE STRING "Target name")
 set(PROJECT_CONFIG_ARCH "" CACHE STRING "Architecture")
 set(PROJECT_ROOT_PATH ${CMAKE_SOURCE_REALPATH})
-set(PROJECT_BUILD_DIR ${PROJECT_ROOT_PATH}/build/${PROJECT_TARGET_NAME}/${CMAKE_BUILD_TYPE}/${PROJECT_CONFIG_ARCH} CACHE INTERNAL "")
+set(PROJECT_BUILD_DIR ${PROJECT_ROOT_PATH}/build/${PROJECT_TARGET_NAME}/${CMAKE_BUILD_TYPE}/${PROJECT_CONFIG_GROUP}/${PROJECT_CONFIG_ARCH} CACHE INTERNAL "")
 
 # Suppress macOS X RPATH warnings and adopt new related behaviors
 if(NOT CMAKE_VERSION VERSION_LESS 3.9)
@@ -183,9 +183,7 @@ set(
 set(PROJECT_FRAMEWORK_LINKS
     ${PROJECT_FRAMEWORK_LINKS}
 	"-framework Foundation"
-	"-framework UIKit"
-    "-framework CoreFoundation"
-    CACHE INTERNAL ""
+	CACHE INTERNAL ""
 )
 
 # C flags
@@ -218,8 +216,8 @@ target_link_libraries(${PROJECT_CONFIG_NAME} "${CONAN_LIBS}")
 
 set_target_properties(${PROJECT_CONFIG_NAME} PROPERTIES
     CXX_STANDARD "${PROJECT_CONFIG_CPP_STANDARD}"
-    CXX_STANDARD_REQUIRED true
-    CXX_EXTENSIONS false
+    CXX_STANDARD_REQUIRED YES
+    CXX_EXTENSIONS NO
     CXX_VISIBILITY_PRESET default
     FRAMEWORK TRUE
     FRAMEWORK_VERSION A
