--- a/files/targets/ios_framework/cmake/CMakeLists.txt
+++ b/files/targets/ios_framework/cmake/CMakeLists.txt
@@ -17,7 +17,7 @@ endif()
 
 # Platform configurations
 set(DEVELOPMENT_TEAM_ID "" CACHE STRING "Development Team ID")
-set(CODE_SIGN_IDENTITY "iPhone Developer" CACHE STRING "Sign Identity")
+set(CODE_SIGN_IDENTITY "" CACHE STRING "Sign Identity")
 set(FRAMEWORK_NAME "${PROJECT_CONFIG_NAME}" CACHE STRING "Framework Name")
 set(FRAMEWORK_BUNDLE_IDENTIFIER "com.ezored.library" CACHE STRING "Bundle Identifier")
 set(DEVICE_FAMILY "1,2" CACHE STRING "Device Family")
@@ -226,6 +226,7 @@ set_target_properties(${PROJECT_CONFIG_NAME} PROPERTIES
     MACOSX_FRAMEWORK_SHORT_VERSION_STRING "${PROJECT_CONFIG_VERSION}"
     XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET "${CMAKE_OSX_DEPLOYMENT_TARGET}"
     XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "${CODE_SIGN_IDENTITY}"
+    XCODE_ATTRIBUTE_CODE_SIGNING_REQUIRED "NO"
     XCODE_ATTRIBUTE_DEVELOPMENT_TEAM "${DEVELOPMENT_TEAM_ID}"
     XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "${DEVICE_FAMILY}"
     XCODE_ATTRIBUTE_ONLY_ACTIVE_ARCH NO
